--- a/nebu-rbac-chart/templates/rolebinding.yaml
+++ b/nebu-rbac-chart/templates/rolebinding.yaml
@@ -1,16 +1,73 @@
-{{- range .Values.serviceAccounts }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .name }}-binding
-  namespace: {{ $.Values.namespace }}
+  name: pod-manager-binding
+  namespace: {{ .Values.namespace }}
 subjects:
-- kind: ServiceAccount
-  name: {{ .name }}
-  namespace: {{ $.Values.namespace }}
+- kind: User
+  name: {{ .Values.podManagerUser }}
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: user-role
+  name: pod-manager
   apiGroup: rbac.authorization.k8s.io
+
 ---
-{{- end }}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: configmap-manager-binding
+  namespace: {{ .Values.namespace }}
+subjects:
+- kind: User
+  name: {{ .Values.configmapManagerUser }}
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: configmap-manager
+  apiGroup: rbac.authorization.k8s.io
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: monitoring-role-binding
+  namespace: {{ .Values.namespace }}
+subjects:
+- kind: Group
+  name: {{ .Values.monitoringGroup }}
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: monitoring-role
+  apiGroup: rbac.authorization.k8s.io
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: secret-manager-binding
+  namespace: {{ .Values.namespace }}
+subjects:
+- kind: User
+  name: {{ .Values.secretManagerUser }}
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: secret-manager
+  apiGroup: rbac.authorization.k8s.io
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: deployment-manager-binding
+  namespace: {{ .Values.namespace }}
+subjects:
+- kind: User
+  name: {{ .Values.deploymentManagerUser }}
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: deployment-manager
+  apiGroup: rbac.authorization.k8s.io
