Creating roles add rolebindings

--- a/nebu-rbac-chart/templates/role.yaml
+++ b/nebu-rbac-chart/templates/role.yaml
@@ -1,7 +1,22 @@
+# read-only
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: {{ .Values.namespace }}
-  name: user-role
+  name: read-only-role
 rules:
-{{- toYaml .Values.role.rules | nindent 2 }}
+  - apiGroups: [""]
+    resources: ["pods", "pods/log"]
+    verbs: ["get", "list", "watch"]
+
+---
+# Write
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: {{ .Values.namespace }}
+  name: write-role
+rules:
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["create", "delete", "update"]
