--- a/nebu-rbac-chart/values.yaml
+++ b/nebu-rbac-chart/values.yaml
@@ -1,11 +1,4 @@
-namespace: dedicated-namespace
+namespace: "example-namespace"
 
-serviceAccounts:
-  - name: user1
-  - name: user2
-
-role:
-  rules:
-    - apiGroups: [""]
-      resources: ["pods", "pods/portforward", "services"]
-      verbs: ["get", "list", "watch", "create"]
+userA: "janek"
+userB: "radek"
